--- a/src/main/resources/templates/events/show.html
+++ b/src/main/resources/templates/events/show.html
@@ -13,9 +13,9 @@
 
 <div class="row">
   <img class="eventPhoto" src="https://pbs.twimg.com/profile_images/1392981615865892867/Vnq2R4c6_400x400.jpg" alt="event photo">
-  <div class="eventinfo"><p id="eventName" style="font-size: 44px;">A Career in Strategy & Marketing Consultancy</p>
-    <p id="date" style="font-size: 30px;">date</p>
-    <p id="location" style="font-size: 26px;">location</p>
+  <div class="eventinfo"><p id="eventName" style="font-size: 44px;" th:text="${event.name}">A Career in Strategy & Marketing Consultancy</p>
+    <p id="date" style="font-size: 30px;" th:text="${date}">date</p>
+    <p id="location" style="font-size: 26px;" th:text="${event.location}">location</p>
     <button class="registerButton">Register</button></div>
 
 </div>
@@ -30,7 +30,7 @@
   <div id="lineGray"></div>
 
   <div id="description">
-    <p class="descriptionText">
+    <p class="descriptionText" th:text="${event.description}">
       DESCRIPTION
     </p>
   </div>
