Admin panel changes

--- a/src/main/resources/templates/attendances/create.html
+++ b/src/main/resources/templates/attendances/create.html
@@ -10,11 +10,11 @@
     <div class="container">
 
         <center><h2>Add active member</h2></center>
-        <label>Club name</label>
+        <label>Event name</label>
         <input type="text" id="eventname" placeholder="eventname" name="eventname" required>
-        <label>Username</label>
+        <label>User mail</label>
         <input type="text" id="usermail" placeholder="usermail" name="usermail" required>
-        <label>Username</label>
+        <label>Attended</label>
         <input type="text" id="attended" placeholder="attended" name="attended" required>
         <button type="submit">Add attendance</button>
     </div>
