--- a/src/main/resources/templates/clubs/adduser.html
+++ b/src/main/resources/templates/clubs/adduser.html
@@ -10,10 +10,10 @@
 
     <div class="container">
 
-        <center><h2>Add active member</h2></center>
+        <center><h2>Add active member to club</h2></center>
         <label>Club name</label>
         <input type="text" id="clubname" placeholder="clubname" name="clubname" required>
-        <label>Username</label>
+        <label>Usermail</label>
         <input type="text" id="usermail" placeholder="usermail" name="usermail" required>
         <button type="submit">Add active member</button>
     </div>
