--- a/src/main/resources/templates/clubs/applications/create-form.html
+++ b/src/main/resources/templates/clubs/applications/create-form.html
@@ -5,12 +5,12 @@
     <title>Title</title>
     <form method="post" action="/create">
         <div class="container">
-            <center><h2>Create club</h2></center>
+            <center><h2>Create application</h2></center>
             <label>Email</label>
             <input type="text" id="name" placeholder="name" name="name" required>
             <label>Username</label>
             <input type="text" id="description" placeholder="description" name="description" required>
-            <button type="submit">Create club</button>
+            <button type="submit">Create application</button>
         </div>
     </form>
 </head>
