--- a/src/main/resources/templates/clubs/create.html
+++ b/src/main/resources/templates/clubs/create.html
@@ -11,9 +11,9 @@
     <div class="container">
 
         <center><h2>Create club</h2></center>
-        <label>Email</label>
+        <label>Club name</label>
         <input type="text" id="name" placeholder="name" name="name" required>
-        <label>Username</label>
+        <label>Club description</label>
         <input type="text" id="description" placeholder="description" name="description" required>
         <button type="submit">Create club</button>
     </div>
