Registration bug fix and placeholder images added

--- a/src/main/resources/templates/events/show.html
+++ b/src/main/resources/templates/events/show.html
@@ -12,7 +12,7 @@
 <div th:replace="navbar/show :: navbar" ></div>
 
 <div class="row">
-  <img class="eventPhoto" src="https://pbs.twimg.com/profile_images/1392981615865892867/Vnq2R4c6_400x400.jpg" alt="event photo">
+  <img class="eventPhoto" src="https://jooinn.com/images/lake-view-65.jpg" alt="event photo">
   <div class="eventinfo"><p id="eventName" style="font-size: 44px;" th:text="${event.name}">A Career in Strategy & Marketing Consultancy</p>
     <p id="date" style="font-size: 30px;" th:text="${date}">date</p>
     <p id="location" style="font-size: 26px;" th:text="${event.location}">location</p>
