--- a/src/main/resources/templates/users/show.html
+++ b/src/main/resources/templates/users/show.html
@@ -19,7 +19,7 @@
 <div id="gradient"></div>
 
 <div class="top">
-    <img id="profilephoto" src="" alt="profile photo"/>
+    <img id="profilephoto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT4W6xgInhHMPzfDvsq0YvMXgYUJlqzOjM1dA&usqp=CAU" alt="profile photo"/>
     <p th:text="${user.username}"></p>
 </div>
 
