--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -105,7 +105,7 @@
 <body>
 <div id="parent">
 	<div id="div1">
-		<img class="logo" src="../img/sigma_logo.png">
+		<img class="logo" src="https://i.ibb.co/pJRhkQR/sigma-logo.png">
 	</div>
 	<div id="div2">
 		<center><h1>Welcome</h1></center>
