--- a/src/main/resources/templates/clubs/show.html
+++ b/src/main/resources/templates/clubs/show.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<div class="coverphoto"><img id="coverid" src="" alt="cover photo"/></div>
+<div class="coverphoto"><img id="coverid" src="" /></div>
 
 <div class="profilephoto"><img id="profileid" src="" alt="profile photo"/></div>
 
@@ -15,7 +15,7 @@
 <form method="POST" th:action="@{/clubs/{id}/applications(id=${club.id})}">
     <button class="requestactivemembershipbutton" type="submit" name="submit" value="value" >request active membership</button>
 </form>
-<a href="/events/create" class="createeventbutton">create event</a>
+<a th:if="${role}<=1" href="/events/create" class="createeventbutton">create event</a>
 <a th:if="${role}==0 or ${role}==3" href="/financeTable" class="goToFinanceTablePageButton">view finance table</a>
 
 
@@ -36,17 +36,17 @@
     <ul class="eventslist">
         <li class="event1" th:if="${!upcomingEvents.isEmpty()}">
             <a th:href="@{/events/{id}(id=${upcomingEvents.get(0).getId()})}"><img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="event photo"  style="width: 232px; height: 154px; object-fit: cover;" /></a>
-            <a class="eventname" href="" th:text="${upcomingEvents.get(0).name}"></a>
+            <a class="eventname" th:href="@{/events/{id}(id=${upcomingEvents.get(0).getId()})}" th:text="${upcomingEvents.get(0).name}"></a>
             <p class="eventdate" th:text="${upcomingEvents.get(0).location}"></p>
         </li>
         <li class="event2" th:if="${upcomingEvents.size() >= 2}">
             <a th:href="@{/events/{id}(id=${upcomingEvents.get(1).getId()})}"><img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="event photo"  style="width: 232px; height: 154px; object-fit: cover;" /></a>
-            <a class="eventname" href="" th:text="${upcomingEvents.get(1).name}"></a>
+            <a class="eventname" th:href="@{/events/{id}(id=${upcomingEvents.get(1).getId()})}" th:text="${upcomingEvents.get(1).name}"></a>
             <p class="eventdate" th:text="${upcomingEvents.get(1).location}"></p>
         </li>
         <li class="event3" th:if="${upcomingEvents.size() >= 3}">
             <a th:href="@{/events/{id}(id=${upcomingEvents.get(2).getId()})}"><img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="event photo"  style="width: 232px; height: 154px; object-fit: cover;" /></a>
-            <a class="eventname" href="" th:text="${upcomingEvents.get(2).name}"></a>
+            <a class="eventname" th:href="@{/events/{id}(id=${upcomingEvents.get(2).getId()})}" th:text="${upcomingEvents.get(2).name}"></a>
             <p class="eventdate" th:text="${upcomingEvents.get(2).location}"></p>
             <a class="more" href="">more</a>
         </li>
@@ -57,17 +57,17 @@
     <ul class="eventslist">
         <li class="event1" th:if="${pastEvents.size() >= 1}">
             <a th:href="@{/events/{id}(id=${pastEvents.get(0).getId()})}"><img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="event photo"  style="width: 232px; height: 154px; object-fit: cover;" /></a>
-            <a class="eventname" href="" th:text="${pastEvents.get(0).name}"></a>
+            <a class="eventname" th:href="@{/events/{id}(id=${pastEvents.get(0).getId()})}" th:text="${pastEvents.get(0).name}"></a>
             <p class="eventdate" th:text="${pastEvents.get(0).location}"></p>
         </li>
         <li class="event2" th:if="${pastEvents.size() >= 2}">
             <a th:href="@{/events/{id}(id=${pastEvents.get(1).getId()})}"><img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="event photo"  style="width: 232px; height: 154px; object-fit: cover;" /></a>
-            <a class="eventname" href="" th:text="${pastEvents.get(1).name}"></a>
+            <a class="eventname" th:href="@{/events/{id}(id=${pastEvents.get(1).getId()})}" th:text="${pastEvents.get(1).name}"></a>
             <p class="eventdate" th:text="${pastEvents.get(1).location}"></p>
         </li>
         <li class="event3" th:if="${pastEvents.size() >= 3}">
             <a th:href="@{/events/{id}(id=${pastEvents.get(2).getId()})}"><img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="event photo"  style="width: 232px; height: 154px; object-fit: cover;" /></a>
-            <a class="eventname" href="" th:text="${pastEvents.get(2).name}"></a>
+            <a class="eventname" th:href="@{/events/{id}(id=${pastEvents.get(2).getId()})}" th:text="${pastEvents.get(2).name}"></a>
             <p class="eventdate" th:text="${pastEvents.get(2).location}"></p>
             <a class="more" href="">more</a>
         </li>
@@ -77,21 +77,21 @@
 
 <p class="activememberlisttitle">Active Members:</p>
 <div class="maincontainer">
-    <tr id="activemembers" th:each="user : ${activeMembers}">
-            <a class="username" th:href="@{/users/{id}(id=${user.getId()})}" th:text="${user.getUsername()}"></a>
-    </tr>
+    <table id="activemembers" th:each="user : ${activeMembers}">
+        <tr><a class="username" th:href="@{/users/{id}(id=${user.getId()})}" th:text="${user.getUsername()}"></a></tr>
+    </table>
 </div>
 
 <div th:if="${role}<=1">
     <p class="requestlisttitle" >Active Membership Requests:</p>
-    <div class="secondcontainer" th:each="user : ${activeMembershipRequests}">
-        <ul id="requests">
+    <div class="secondcontainer">
+        <ul id="requests" th:each="user : ${activeMembershipRequests}">
             <li>
                 <a class="username" th:href="@{/users/{id}(id=${user.getId()})}" th:text="${user.getUsername()}"></a>
-                <form method="POST" th:action="@{/clubs/{id}/applications/approve(id=${club.id})}" >
+                <form method="POST" th:action="@{/clubs/{id}/applications/approve(id=${club.id})}">
                     <button class= "acceptbutton" type="submit" >🗸</button>
                 </form>
-                <form method="POST" th:action="@{/clubs/{id}/applications/reject(id=${club.id})}" >
+                <form method="POST" th:action="@{/clubs/{id}/applications/reject(id=${club.id})}">
                     <button class= "rejectbutton" type="submit" >✖</button>
                 </form>
             </li>
