Some Attendance features
-Register button works now
-Register can be clicked only once
-Participants of an event are displayed in the event show page

--- a/src/main/resources/templates/events/show.html
+++ b/src/main/resources/templates/events/show.html
@@ -16,7 +16,13 @@
   <div class="eventinfo"><p id="eventName" style="font-size: 44px;" th:text="${event.name}">A Career in Strategy & Marketing Consultancy</p>
     <p id="date" style="font-size: 30px;" th:text="${date}">date</p>
     <p id="location" style="font-size: 26px;" th:text="${event.location}">location</p>
-    <button class="registerButton">Register</button></div>
+
+    <form method="post" th:action="@{/attendances/create/{id}(id=${event.id})}">
+      <button class="registerButton">Register</button>
+    </form>
+
+  </div>
+
 
 </div>
 
@@ -26,7 +32,7 @@
 
 
   <div id="buttons">
-    <form style="display: inline; margin-top: 4px" method="post" action="@{/${eventid}/attendances}">
+    <form style="display: inline; margin-top: 4px" method="post" th:action="@{/attendances/{id}(id=${event.id})}">
       <button style="margin: 0" th:if="${showAttendance}" class="attendanceButton">Take Attendance</button>
     </form>
     <button class="descriptionButton" onclick="displayDescription()">Description</button>
@@ -43,24 +49,29 @@
   </div>
 
   <div id="participants">
-    <table>
+    <table th:each="i : ${#numbers.sequence( 0, participants.size(), 4)}">
       <tr>
-        <td>
-          <img>
-          <p class="participant">Person X</p>
+
+        <td th:if="${participants.size()}>=${i}+1">
+          <a th:href="@{/users/{id}(id=${participants.get(i).getId()})}"><img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo" /></a>
+          <a class="participant" th:href="@{/users/{id}(id=${participants.get(i).getId()})}" th:text="${participants.get(i).getUsername()}"></a>
         </td>
-        <td>
-          <img>
-          <p class="participant">Person Y</p>
+
+        <td th:if="${participants.size()}>=${i}+2">
+          <a th:href="@{/users/{id}(id=${participants.get(i+1).getId()})}"><img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo" /></a>
+          <a class="participant" th:href="@{/users/{id}(id=${participants.get(i+1).getId()})}" th:text="${participants.get(i+1).getUsername()}"></a>
         </td>
-        <td>
-          <img>
-          <p class="participant">Person Z</p>
+
+        <td th:if="${participants.size()}>=${i}+3">
+          <a th:href="@{/users/{id}(id=${participants.get(i+2).getId()})}"><img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo" /></a>
+          <a class="participant" th:href="@{/users/{id}(id=${participants.get(i+2).getId()})}" th:text="${participants.get(i+2).getUsername()}"></a>
         </td>
-        <td>
-          <img>
-          <p class="participant">Person T</p>
+
+        <td th:if="${participants.size()}>=${i}+4">
+          <a th:href="@{/users/{id}(id=${participants.get(i+3).getId()})}"><img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo" /></a>
+          <a class="participant" th:href="@{/users/{id}(id=${participants.get(i+3).getId()})}" th:text="${participants.get(i+3).getUsername()}"></a>
         </td>
+
       </tr>
     </table>
   </div>
