--- a/src/main/resources/templates/users/show.html
+++ b/src/main/resources/templates/users/show.html
@@ -27,7 +27,7 @@
 <div class="middle">
     <ul class="info">
         <li th:text="'Department: ' + ${user.department}"></li>
-        <li th:text="'Date of Birth: ' + ${user.dateOfBirth}"></li>
+        <li th:text="'Date of Birth: ' + ${dateOfBirth}"></li>
         <li th:text="'Start of studies: ' + ${user.startOfStudies}"></li>
         <li th:text="'Participated in ' + ${#lists.size(attendedevents)} + ' events'"></li>
         <li th:text="'About me: ' + ${user.description}"></li>
